<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:background="@color/placeholder_grey_20"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivExpandedFotoPokemon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvDetailNombrePokemon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_pokemon"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TableLayout
                        android:id="@+id/tlPokemonStats"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:stretchColumns="*">

                        <TextView
                            android:id="@+id/tvDetalleAtaque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/desc_ataque_pokemon"
                            android:textSize="14sp" />

                        <TableRow
                            android:id="@+id/firstRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/base_experience"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvBaseExperience"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ejemp_power"
                                android:textSize="14sp" />

                        </TableRow>

                        <TableRow
                            android:id="@+id/secondRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/power_pokemon_hint"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvPower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ejemp_power"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/thirdRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/accuracy_pokemon_hint"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvAccuracy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ejemp_power"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/fourthRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/height_pokemon_hint"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ejemp_power"
                                android:textSize="14sp" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/fifthRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/weight_pokemon_hint"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ejemp_power"
                                android:textSize="14sp" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>